# Diploma_thesis

./: contributors.txt
RTF-1.1/: Authors.txt  BuildingOnUnix.txt  BuildingOnWindows.txt  CMakeLists.txt  License.docx  License.txt  Readme.txt  Version.txt
RTF-1.1/Apps/: CMakeLists.txt
RTF-1.1/Apps/TOFDenoising/: CMakeLists.txt  Dataset.h  Features.h  Loss.h  QiDAGM12Filterbank.cpp  QiDAGM12Filterbank.h  RFSFilterbank.cpp  RFSFilterbank.h  Readme.txt  TOFDenoising.cpp
RTF-1.1/Data/Deconvolution/: single.txt  test.txt  train.txt
RTF-1.1/Data/Deconvolution/kernels/: image_1.dlm  image_2.dlm  image_3.dlm  image_4.dlm
RTF-1.1/Data/MultiLabel/: gendata.pl  test.svm  train.svm
RTF-1.1/Models/Deconvolution/: 2stages_table2gt.txt  2stages_table2mix_table3_figure7.txt  Readme.txt
RTF-1.1/RTF/: Array.h  Basic.h  Classify.h  Compute.h  Criteria.h  GPU.cu  GPU.h  Image.h  Learning.h  LinearOperator.h  Loss.h  MPI.h  Minimization.h  Monitor.h  Pairwise.h  Priors.h  Rect.h  Serialization.h  Stacked.h  Training.h  Trees.h  Types.h  Unary.h  Utility.h
Supporting Code/: Results_Baseline_opt.html  Results_Baseline_opt.ipynb  Results_RTF.html  Results_RTF.ipynb  TOF_data_inspect.html  TOF_data_inspect.ipynb  TotalVariation_Folderwide.py  aDenoising_TotalVariation_Folderwide.py  combine_all_Data_For_RTF.py  combine_for_RTF_specific.py  dataStatistics.py  evaluate_RTF.py  evaluate_RTFs.py  evaluate_Scenic_Loss.py  shuffleScenes.py  simSingTof.py  test_RTF.py  test_stacked_RTF.py
Supporting Code/.ipynb_checkpoints/: Results_RTF-checkpoint.ipynb
Supporting Code/Baseline_Denoising/: TotalVariation_Folderwide.py
